--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
 * {
   box-sizing: border-box;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
 }
 
 :root {
   --rad: 30px;
-  --cont-width: 400px;
-  --cont-height: 600px;
+  --cont-width: 360px;
+  --cont-height: 520px;
 }
 
 .container {
-  outline: 2px solid rgb(0, 60, 255);
+  outline: 2px solid #1f354c;
   border-radius: var(--rad);
   background-color: white;
   width: var(--cont-width);
@@ -28,7 +28,7 @@
 }
 
 .photo-container {
-  border: 1px solid gray;
+  box-shadow: 0px 2px 3px rgb(128, 128, 128, 0.4);
   border-radius: 50%;
   width: calc(var(--cont-height) / 3);
   height: calc(var(--cont-height) / 3);
@@ -40,7 +40,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: -40px;
+  object-position: -20px;
   border: 10px solid white;
   border-radius: 50%;
 }
@@ -55,7 +55,7 @@
 .user-info {
   width: 100%;
   height: 15%;
-  padding: 30px;
+  padding: 20px 50px;
   font-size: 0.8rem;
 }
 
@@ -66,14 +66,21 @@
 
 .follow-button {
   color: #ffffff;
+  font-weight: bold;
   border: none;
   cursor: pointer;
   border-radius: 8px;
   padding: 12px 24px;
-  width: 172px;
-  height: 48px;
-  background: #5c94b9;
+  width: 120px;
+  height: 44px;
+  background: #68b3fd;
+  box-shadow: 0 2px 0 #507795;
   margin-top: 15px;
+}
+
+.follow-button:active {
+  background-color: #5782a3;
+  transform: translateY(2px);
 }
 
 footer {
@@ -81,17 +88,23 @@ footer {
   height: 15%;
   display: flex;
   justify-content: space-evenly;
-  background-image: url(/assets/img/background.png);
-  border-bottom-left-radius: var(--rad);
-  border-bottom-right-radius: var(--rad);
+  background-color: #1f354c;
+
+  border-bottom-left-radius: calc(var(--rad) - 3px);
+  border-bottom-right-radius: calc(var(--rad) - 3px);
 }
 
 .footer-info {
   display: flex;
   width: calc(100% / 3);
-  padding-top: 30px;
-  padding-left: 10px;
-  color: red;
+  padding-top: 20px;
+  padding-left: 20px;
+  color: #9c707c;
+}
+
+.footer-info:nth-child(2) {
+  border-left: 2px solid rgb(45, 69, 88, 0.5);
+  border-right: 2px solid rgb(45, 69, 88, 0.5);
 }
 
 .footer-ico {
